# RiskGo

./: .gitignore  Makefile  NOTICE  README.md  docker-compose.yaml  risk_cli.py  setup.sh
cpp_engine/: CMakeLists.txt  Dockerfile  Dockerfile.base
cpp_engine/src/: logger.h  server.cpp
go_gateway/: Dockerfile  go.sum  main.go
go_gateway/internal/market/: provider.go  provider_test.go
go_gateway/proto/: risk_engine.pb.go  risk_engine_grpc.pb.go
protos/: risk_engine.proto
